<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        tools:context=".OptionsActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="239dp"
            android:layout_height="126dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/iconPets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_pets_24" />

        <Button
            android:id="@+id/btnMyPets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_rounded"
            android:text="@string/btnMyPets"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnAddPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="138dp"
            android:background="@drawable/button_rounded"
            android:text="@string/btnAddPet"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMyPets" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>